# net_approximation

./: CMakeLists.txt  main.cpp
include/: solution_equation.hpp
